Add enableAsync and an executor to make sure the @Async annotation on the listeners is actually forking threads. Made sure all the tests wait a little bit for the forked threads to complete.